<resources>
    <string name="app_name">RacheNewsReader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">A News Reader</string>
    <string name="nav_header_subtitle">https://github.com/vietanh2000april/RacheNewsReader</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="world">World</string>
    <string name="science">SCIENCE</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="politics">Politics</string>
    <string name="sports">SPORTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="home">Home</string>
    <string name="science_fragment">Science Fragment</string>
    <string name="world_fragment">World Fragment</string>
</resources>