<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/dashboard_24"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/globe_24"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/tube_24"
            android:title="@string/science" />
    </group>
</menu>